# validation

./: .gitignore  README.md  crawler.py  find_poetry.py  link_removal.py  lock_generate.py  main.py  markdown.py  parse_diff.patch  pyproject.toml  query_limit.py  repo_stat.py  requirements.txt  sbom.py  sbom_test.py  test.py  utils.py  vulnerability_report.md  vulnerability_scan.py
sbom_report/: syft-sbom.json  syft-vuln.json  trivy-sbom.json  trivy-vuln.json
