[project]
name = "validation"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich (>=14.1.0,<15.0.0)",
    "prettytable (>=3.16.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "gitpython (>=3.1.45,<4.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "typer (>=0.19.2,<0.20.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
